<resources>
    <string name="app_name">SignUpForm</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username:</string>
    <string name="submit">SUBMIT</string>
    <string name="placeholder">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="password_placeholder">Please enter your password</string>
    <string name="confirm_placeholder">Please confirm your username</string>
</resources>
