<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <RelativeLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/username_label"
                android:layout_weight="75"
                android:hint="@string/placeholder" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/password_label"
                android:layout_weight="75"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirm_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/confirm_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/confirm_label"
                android:layout_weight="75"
                android:hint="@string/confirm_placeholder"
                android:inputType="textPassword" />

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/username"
        android:layout_below="@id/confirm"
        android:text="@string/submit" />
</RelativeLayout>
